fix(Home/Pres): leger bug d'alignement sur mobile corrigé

--- a/src/styles/pages/home/_presentation.scss
+++ b/src/styles/pages/home/_presentation.scss
@@ -46,7 +46,7 @@
     }
     p {
       font-size: min(0.85rem, 3.7vw);
-      line-height: min(2rem, 4vh);
+      line-height: min(2rem, 3.8vh);
       margin-bottom: 1rem;
       &:first-of-type {
         margin-top: 3rem;
